deploy/k8s/dr-coffee/apps/tgo-widget-js/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgo-widget-js
  namespace: dr-coffee-test
spec:
  selector:
    app: tgo-widget-js
  ports:
    - name: http
      port: 80
      targetPort: http
